--- a/fichier.html
+++ b/fichier.html
@@ -43,7 +43,7 @@
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);S
+    const database = getDatabase(app);
   </script>
   <script type="module" src="fichier.js"></script>
 </html>
